# Personalised-PBPK-Demo

./: .gitignore  README.md  nlme-remifentanil.xlsx  notebook_remifentanil.py  prepare_folds.py  pyproject.toml  run_experiments.py  run_gsa.py  run_paths.py
configs/experiments/: bayesianopt.yaml  default.yaml  differentialevo.yaml  hybrid_fixed_hparams.yaml  neural_ode_eeg.yaml  neural_ode_remifentanil.yaml  nlme_optax.yaml
datasets/reference/: all_rdatasets.xlsx  pkpdRemifentanil_with_HT_WT_BSA.xlsx
experiments/: __init__.py  analysis_names.py  cli.py  config.py  folds.py  results.py  runner.py  schemas.py  summary.py  validate.py
experiments/adapters/: __init__.py  base.py  bayesianopt.py  differentialevo.py  hybrid_fixed_hparams.py  neural_ode_eeg.py  neural_ode_remifentanil.py  nlme_optax.py
notebook_support/: __init__.py  bayesianopt_results.py  differentialevo_results.py  gsax_results.py  hybrid_results.py  nlme_results.py  node_results.py  remifentanil_eda.py  style.py
notebook_support/mpl_styles/: __init__.py  plot.mplstyle
pharmacokinetics/: __init__.py  nlme.py  remifentanil.py  remifentanil_node.py
pharmacokinetics/personalisedeeg/: __init__.py  config.py  data.py  dim_reduction.py  kalman.py  model.py  plotting.py  trainer.py
pharmacokinetics/tests/: README.md  __init__.py  conftest.py  test_consistency.py  test_gradients.py  test_hybrid_preprocessing.py  test_loss_gradients.py  test_remifentanil.py  test_remifentanil_node.py  test_symbolic_regression.py
tests/: test_run_gsa.py
tests/experiments/: conftest.py  test_adapters.py  (+6 more)
(+297 files in other folders)
